--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     </script> -->
     <!-- <script src="first.js"></script> -->
     <!-- <script src="variable.js"></script> -->
-    <script src="function.js"></script>
+    <!-- <script src="function.js"></script> -->
+    <!-- <script src="function-contructor.js"></script> -->
+    <!-- <script src="function-expression.js"></script> -->
+    <!-- <script src="iife.js"></script> -->
+    <!-- <script src="fn-closures.js"></script> -->
+    <script src="fn-arrow.js"></script>
 
 </body>
 </html>
