add javascript code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
     <!-- <script src="function-expression.js"></script> -->
     <!-- <script src="iife.js"></script> -->
     <!-- <script src="fn-closures.js"></script> -->
-    <script src="fn-arrow.js"></script>
+    <!-- <script src="fn-arrow.js"></script> -->
+     <!-- <script src="function-prototype.js"></script> -->
+     <!-- <script src="synch-asynch.js"></script> -->
+     <!-- <script src="callback-function2.js"></script> -->
+     <!-- <script src="calculator.js"></script> -->
+     <!-- <script src="variable-let-const.js"></script> -->
+     <!-- <script src="array.js"></script> -->
+     <!-- <script src="spread.js"></script> -->
+     <script src="rest-and-default.js"></script>
 
 </body>
 </html>
