--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
      <!-- <script src="variable-let-const.js"></script> -->
      <!-- <script src="array.js"></script> -->
      <!-- <script src="spread.js"></script> -->
-     <script src="rest-and-default.js"></script>
+     <!-- <script src="rest-and-default.js"></script> -->
+     <!-- <script src="Account.js"></script> -->
+     <!-- <script src="Person.js"></script> -->
+     <!-- <script src="Human.js"></script> -->
+     <script src="Bank.js"></script>
 
 </body>
 </html>
